--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0"
   },
