--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react": "18.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.5.4",
