crearing search page

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
