--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "sweetalert2": "^11.4.17"
+    "sweetalert2": "^11.4.17",
+    "swiper": "^8.2.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.5.4",
