--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,7 +9,8 @@
   ],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 8
+    "ecmaVersion": 8,
+    "requireConfigFile": false
   },
   "env": {
     "browser": true,
