--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "date-fns": "^2.28.0",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-date-range": "^1.4.0",
