--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.28.0",
     "moment": "^2.29.4",
     "next": "12.1.6",
+    "next-auth": "^4.10.3",
     "react": "18.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.1.0",
