--- a/admin_dashboard/package.json
+++ b/admin_dashboard/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
