--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "sharp": "^0.31.2",
     "sweetalert2": "^11.4.17",
     "swiper": "^8.2.3"
   },
