--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "SET NODE_ENV=development & nodemon index.js",
     "start": "node index.js"
   },
   "author": "ashikur",
